[fix]table overflow:scorll and table sort

--- a/src/pages/SqlDetail/index.less
+++ b/src/pages/SqlDetail/index.less
@@ -114,6 +114,8 @@
   .treeTable{
     display: flex;
     flex-direction: column;
+    max-height: 600px;
+    overflow: scroll;
     .treeTableItem{
       border-bottom: 1px solid #f0f0f0;
       padding: 12px;
